package Proyectos.huelga;

public interface AccionesHuelga {

    void secundar();
    void asignarServiciosMinimos();
    void finalizar();
}
