package Proyectos.huelga;

public enum EstadoDocente {

    ACTIVO, EN_HUELGA,SERVICIOS_MINIMOS;

}
